unpackaged/main/default/objects/BL_FieldsMapping__mdt/BL_FieldsMapping__mdt.object-meta.xml
<CustomObject>
    <label>BL FieldsMapping</label>
    <pluralLabel>BL FieldsMappings</pluralLabel>
</CustomObject>