unpackaged/main/default/objects/BL_FieldsMapping__mdt/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <label>Field Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>