unpackaged/main/default/objects/BL_FieldsMapping__mdt/fields/FieldType__c.field-meta.xml
<CustomField>
    <fullName>FieldType__c</fullName>
    <label>Field Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>