unpackaged/main/default/objects/BL_FieldsMapping__mdt/fields/Get_Picklist_Label__c.field-meta.xml
<CustomField>
    <fullName>Get_Picklist_Label__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Get Picklist Label</label>
    <type>Checkbox</type>
</CustomField>