unpackaged/main/default/objects/BL_FieldsMapping__mdt/fields/InnerSelect_UseCase__c.field-meta.xml
<CustomField>
    <fullName>InnerSelect_UseCase__c</fullName>
    <label>InnerSelect UseCase</label>
    <referenceTo>BL_UseCase__mdt</referenceTo>
    <relationshipLabel>BL FieldsMappings (InnerSelect UseCase)</relationshipLabel>
    <relationshipName>BL_FieldsMappingsInnerSelect</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>