unpackaged/main/default/objects/BL_FieldsMapping__mdt/fields/IsCurrency__c.field-meta.xml
<CustomField>
    <fullName>IsCurrency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCurrency</label>
    <type>Checkbox</type>
</CustomField>