unpackaged/main/default/objects/BL_FieldsMapping__mdt/fields/Send_to_Clienteling_App__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Clienteling_App__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Clienteling App</label>
    <type>Checkbox</type>
</CustomField>