unpackaged/main/default/objects/BL_FieldsMapping__mdt/fields/SFFieldPath__c.field-meta.xml
<CustomField>
    <fullName>SFFieldPath__c</fullName>
    <label>SFFieldPath</label>
    <length>255</length>
    <type>Text</type>
</CustomField>