unpackaged/main/default/objects/BL_FieldsMapping__mdt/fields/Wrapper_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Wrapper_Field_Name__c</fullName>
    <label>Wrapper Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>